@@ -5,7 +5,7 @@
 // Modified by:
 // Created:     29/10/2000
 // RCS-ID:      $Id$
-// Copyright:   (c) 2000-2001, 2005 Mattia Barbon
+// Copyright:   (c) 2000-2001, 2005, 2008 Mattia Barbon
 // Licence:     This program is free software; you can redistribute it and/or
 //              modify it under the same terms as Perl itself
 /////////////////////////////////////////////////////////////////////////////
@@ -31,6 +31,7 @@ public:
 
     void Handler( wxEvent& event );
 private:
+    bool m_is_method;
     SV* m_method;
     SV* m_self;
 };
