@@ -1,6 +1,7 @@
 Revision history for Perl extension Wx.
 
 0.86
+	- Allow binding a method to an event, not just a sub reference.
 
 0.85  Sun Aug 24 11:26:38 CEST 2008
 	- Compilation fixes for wxMotif (patch by Marek Rouchal).
